# double-pendulum

./: .gitignore  CMakeLists.txt  README.md  environment.yml
include/: arithmetic.h  library.h  pendulum.h  physics.h  renderer.h  sdl_visuals.h  sha256.h  visualizer.h
sender/: receiver  receiver.c
src/: CMakeLists.txt  arithmetic.c  arithmetic.h  library.c  main.c  make.c  pendulum.c  physics.c  renderer.c  sdl_visuals.c  sha256.c  visualizer.c
tests/: CMakeLists.txt  CMakeLists_old.txt  arithmetics_test.c  test_library.cpp  test_pendulum.txt  test_suite.c
